[gd_scene load_steps=18 format=3 uid="uid://cn4tj0p4ncs7j"]

[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_fgop6"]
[ext_resource type="Script" path="res://Scenes/Games/base_game.gd" id="2_ox6hc"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="3_8io2v"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="4_lskpm"]
[ext_resource type="Animation" uid="uid://bv5tuc1kjv0k5" path="res://addons/godot-xr-tools/hands/animations/right/Hold.res" id="5_gb7bn"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/hands/poses/hand_pose_settings.gd" id="6_hd3k7"]
[ext_resource type="PackedScene" uid="uid://bfx151rpcohlg" path="res://Assets/Flashlight_01.glb" id="7_lh1i0"]
[ext_resource type="PackedScene" uid="uid://dtq0plxtxo1vv" path="res://Scenes/Elements/Search/flashlight.tscn" id="8_pd073"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="9_mykxd"]
[ext_resource type="PackedScene" uid="uid://dlylbfpg3dyik" path="res://Assets/Rooms/Library/scene.gltf" id="10_uga25"]
[ext_resource type="Texture2D" uid="uid://ddtrfycead87q" path="res://icon.svg" id="11_8fdhb"]
[ext_resource type="AudioStream" uid="uid://bsaw5lycmt3m4" path="res://Assets/success.ogg" id="13_fmuch"]
[ext_resource type="AudioStream" uid="uid://dc5wk24h4e75a" path="res://Assets/Commands/search-short-ES.ogg" id="14_bgad0"]

[sub_resource type="Resource" id="Resource_328uv"]
script = ExtResource("6_hd3k7")
open_pose = ExtResource("5_gb7bn")
closed_pose = ExtResource("5_gb7bn")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cnxf1"]
albedo_texture = ExtResource("11_8fdhb")

[sub_resource type="QuadMesh" id="QuadMesh_16h83"]
material = SubResource("StandardMaterial3D_cnxf1")
size = Vector2(2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_m6a1m"]
size = Vector3(10, 0.2, 10)

[node name="Search" instance=ExtResource("1_fgop6")]
script = ExtResource("2_ox6hc")
next_game = "res://Scenes/Games/boton.tscn"

[node name="XROrigin3D" parent="." index="0"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.388014, 0, 0)

[node name="LeftHand" parent="XROrigin3D/LeftHand" index="0" instance=ExtResource("3_8io2v")]

[node name="RightHand" parent="XROrigin3D/RightHand" index="0" instance=ExtResource("4_lskpm")]
transform = Transform3D(1, -3.09086e-08, -1.28028e-08, 3.09086e-08, 0.707107, 0.707107, -1.28028e-08, -0.707107, 0.707107, 0, 0, 0)
default_pose = SubResource("Resource_328uv")

[node name="Flashlight_01" parent="XROrigin3D/RightHand/RightHand" index="2" instance=ExtResource("7_lh1i0")]
transform = Transform3D(-1.13133e-08, -1, -8.59334e-08, -0.965926, -1.13133e-08, 0.258819, -0.258819, 8.59334e-08, -0.965926, 0.0199999, -0.04, 0.098014)
visible = false

[node name="flashlight" parent="XROrigin3D/RightHand/RightHand" index="3" instance=ExtResource("8_pd073")]
transform = Transform3D(0.788011, -4.93894e-08, 0.615662, -0.488523, -0.608582, 0.62528, 0.374681, -0.793492, -0.479569, 0, -0.0457946, 0.142503)

[node name="PlayerBody" parent="XROrigin3D" index="3" instance=ExtResource("9_mykxd")]

[node name="Sketchfab_Scene" parent="." index="1" instance=ExtResource("10_uga25")]
transform = Transform3D(-0.05, 0, -4.37114e-09, 0, 0.05, 0, 4.37114e-09, 0, -0.05, 4.46, 0, -3.99)

[node name="CompleteMessage" type="MeshInstance3D" parent="." index="2"]
transform = Transform3D(1, 0, -1.74846e-07, 0, 1, 0, 1.74846e-07, 0, 1, 1.22337, 1.80313, -1.72453)
visible = false
mesh = SubResource("QuadMesh_16h83")
skeleton = NodePath("")

[node name="floor" type="StaticBody3D" parent="." index="3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
shape = SubResource("BoxShape3D_m6a1m")

[node name="SuccessAudioStream" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("13_fmuch")
bus = &"Music Effect"

[node name="CommandAudioStream" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource("14_bgad0")

[connection signal="game_completed" from="XROrigin3D/RightHand/RightHand/flashlight" to="." method="_on_game_completed"]
