[gd_scene load_steps=19 format=3 uid="uid://5fhngxue8rtd"]

[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_cp4rv"]
[ext_resource type="Script" path="res://Scenes/Games/base_game.gd" id="2_n3nlx"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="5_ah0bu"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="7_v3n3h"]
[ext_resource type="Texture2D" uid="uid://dpyend2ro20py" path="res://Assets/City/Texture/Road/Asphalt015_1K-JPG_Color.jpg" id="10_nukpw"]
[ext_resource type="Texture2D" uid="uid://bdfapqva83tkp" path="res://Assets/City/Texture/Road/Asphalt015_1K-JPG_NormalGL.jpg" id="11_yrk1s"]
[ext_resource type="Texture2D" uid="uid://vtkgaleg6oh6" path="res://Assets/City/Texture/Road/Asphalt015_1K-JPG_Roughness.jpg" id="12_k1x1k"]
[ext_resource type="Sky" uid="uid://c5p0buy60dsgl" path="res://Assets/new_sky.tres" id="13_f0c26"]
[ext_resource type="Texture2D" uid="uid://ddtrfycead87q" path="res://icon.svg" id="13_ooa31"]
[ext_resource type="AudioStream" uid="uid://bsaw5lycmt3m4" path="res://Assets/success.ogg" id="15_7trm7"]
[ext_resource type="AudioStream" uid="uid://b1f3sm72man68" path="res://Assets/failure.ogg" id="15_8a2de"]
[ext_resource type="AudioStream" uid="uid://c24ltg42sd6ir" path="res://Assets/Commands/basket-ES.ogg" id="16_424wy"]

[sub_resource type="Environment" id="Environment_lmosf"]
background_mode = 2
background_energy_multiplier = 2.0
sky = ExtResource("13_f0c26")
ambient_light_source = 3
ambient_light_color = Color(0.988235, 0.996078, 0.866667, 1)
ambient_light_sky_contribution = 0.8
ambient_light_energy = 2.0
reflected_light_source = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cnxf1"]
albedo_texture = ExtResource("13_ooa31")

[sub_resource type="QuadMesh" id="QuadMesh_o4fpj"]
material = SubResource("StandardMaterial3D_cnxf1")
size = Vector2(2, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_pfxvh"]
size = Vector3(100, 1, 100)

[sub_resource type="QuadMesh" id="QuadMesh_mf28p"]
size = Vector2(100, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p5i2u"]
albedo_texture = ExtResource("10_nukpw")
roughness_texture = ExtResource("12_k1x1k")
normal_enabled = true
normal_texture = ExtResource("11_yrk1s")
uv1_triplanar = true

[node name="BaseGameScene" instance=ExtResource("1_cp4rv")]
script = ExtResource("2_n3nlx")
game_time_modifier = 0.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]
environment = SubResource("Environment_lmosf")

[node name="XROrigin3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.515638, 0, 0)

[node name="CompleteMessage" type="MeshInstance3D" parent="XROrigin3D/XRCamera3D" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.515638, -0.21687, -1.32355)
visible = false
mesh = SubResource("QuadMesh_o4fpj")
skeleton = NodePath("../../..")

[node name="MovementTurn" parent="XROrigin3D/RightHand" index="0" instance=ExtResource("5_ah0bu")]
enabled = false

[node name="PlayerBody" parent="XROrigin3D" index="3" instance=ExtResource("7_v3n3h")]
collision_mask = 1

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 0.670453, 0.741952, 0, -0.741952, 0.670453, 0, 0, 0)

[node name="SuccessAudioStream" type="AudioStreamPlayer" parent="." index="3"]
stream = ExtResource("15_7trm7")
bus = &"Music Effect"

[node name="CommandAudioStream" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource("16_424wy")

[node name="FailAudioStream" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource("15_8a2de")

[node name="Floor" type="StaticBody3D" parent="." index="6"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_pfxvh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor" index="1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_mf28p")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_p5i2u")
